# resource-website-v2

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rsws.yml
DataBase/: 20240826155804.sql  20240827022104.sql
rsws-bin/: Cargo.toml
rsws-bin/src/: main.rs
rsws-system/: Cargo.toml
rsws_bin/: Cargo.toml
rsws_bin/src/: init..rs
rsws_core/: Cargo.toml
rsws_core/pem/: decoding.pem  encoding.pem
rsws_core/src/: config.rs  error.rs  lib.rs
rsws_core/src/constants/: depot_key.rs  error_brief.rs  errors.rs  http_headers.rs  mod.rs  responses.rs
rsws_core/src/entitis/: cust_login_log.rs  cust_operate_log.rs  cust_users.rs  mod.rs  rsws_conf.rs  rsws_cregis_conf.rs  rsws_login_log.rs  rsws_payinput.rs  rsws_resource.rs  rsws_role.rs  rsws_user.rs  rsws_user_role.rs
rsws_core/src/middlewares/: mod.rs
rsws_core/src/utils/: email.rs  jwt.rs  mod.rs  normalized_response.rs  request_id.rs  user_claims.rs
rsws_custom/: Cargo.toml
rsws_custom/src/router/: router.rs
rsws_system/: Cargo.toml
rsws_system/src/: lib.rs
rsws_system/src/entitis/: cust_payout.rs  prelude.rs  rsws_menu.rs  rsws_smtp_conf.rs
