[workspace]
members = ["rsws_bin", "rsws_core", "rsws_custom", "rsws_system"]
resolver = "2"

[workspace.dependencies]
rsws_bin = { path = "rsws_bin" }
rsws_core = { path = "rsws_core" }
rsws_system = { path = "rsws_system" }
rsws_custom = { path = "rsws_custom" }

anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.5"
askama = "0.12.1"
rust-embed = "8.5.0"

#加载环境变量
#dotenvy = {version = "0.15.7"}

#data
sea-orm = { version = "1.1.0-rc.1", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-macros = { version = "1.0.1" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
db-pool = { version = "0.2.1" }

#id
idgenerator = "2.0.0"

#email
lettre = "0.11.7"

#序列化
serde = { version = "1.0.207", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.124"

#密码
argon2 = { version = "0.5.3", features = ["std"] }

#web框架
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
salvo = { git="https://github.com/salvo-rs/salvo", features = ["oapi", "jwt-auth", "cors", "anyhow", "compression", "serve-static"] }
