[package]
name = "rsws-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
rsws-core = { path = "../rsws-core" }
rsws-system = { path = "../rsws-system" }

anyhow = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
tracing = { workspace = true, features = ["compression"] }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
