[package]
name = "rsws-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
rsws-core = { path = "../rsws_core" }
rsws-system = { path = "../rsws_system" }

anyhow = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true, features = ["compression"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
